--- a/OfficialSite/Personal/home.html
+++ b/OfficialSite/Personal/home.html
@@ -32,15 +32,18 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="http://raider.mountunion.edu/~olbrycag/OfficialSite/Personal/home.html">Home
+						<!-- https://austin-olbrych.github.io/School/OfficialSite/Personal/home.html
+						http://raider.mountunion.edu/~olbrycag/OfficialSite/Personal/home.html
+						-->
+              <a class="nav-link" href="https://austin-olbrych.github.io/School/OfficialSite/Personal/home.html">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://raider.mountunion.edu/~olbrycag/OfficialSite/Personal/newerBlog.html">Blog</a>
+              <a class="nav-link" href="https://austin-olbrych.github.io/School/OfficialSite/Personal/newerBlog.html">Blog</a>
             </li>
 			<li class="nav-item">
-              <a class="nav-link" href="http://raider.mountunion.edu/~olbrycag/CSC492/492Blog.html">Scrummies</a>
+              <a class="nav-link" href="https://austin-olbrych.github.io/School/CSC492/492Blog.html">Scrummies</a>
             </li>
           </ul>
         </div>
@@ -55,7 +58,7 @@
         <h1 class="display-3">Welcome!</h1>
         <p class="lead">Hello, I am a twenty-one year old student at the University of Mount Union majoring in computer information systems, with a minor in web design. </p>
         <a href="https://www.linkedin.com/in/austin-olbrych-459986b9" class="btn btn-primary btn-lg" target="_blank">LinkedIn</a>
-		<a href="https://github.com/Austin-Olbrych" class="btn btn-primary btn-lg" target="_blank">GitHub</a>
+				<a href="https://github.com/Austin-Olbrych" class="btn btn-primary btn-lg" target="_blank">GitHub</a>
         <a href="https://www.facebook.com/austin.olbrych" class="btn btn-primary btn-lg" target="_blank">Facebook</a>
         <a href="https://www.youtube.com/user/lilalonhorn49" class="btn btn-primary btn-lg" target="_blank">Youtube</a>
         <a href="https://plus.google.com/115550299016966040960" class="btn btn-primary btn-lg" target="_blank">Google</a><br><br>
@@ -73,7 +76,7 @@
               <p class="card-text">An introduction to the techniques and assessment methods involved in the collection, storage, retrieval, interpretation, and presentation of information on the World Wide Web.</p>
             </div>
             <div class="card-footer">
-              <a href="http://raider.mountunion.edu/~olbrycag/CSW103/home.html" class="btn btn-primary">View my projects!</a>
+              <a href="https://austin-olbrych.github.io/School/CSW103/home.html" class="btn btn-primary">View my projects!</a>
             </div>
           </div>
         </div>
@@ -86,7 +89,7 @@
               <p class="card-text">A first experience in computer animation for students who have no previous animation experience with a focus on creating programmed animation that can be displayed on the web.</p>
             </div>
             <div class="card-footer">
-              <a href="http://raider.mountunion.edu/~olbrycag/CSW113/home.html" class="btn btn-primary">View my projects!</a>
+              <a href="https://austin-olbrych.github.io/School/CSW113/home.html" class="btn btn-primary">View my projects!</a>
             </div>
           </div>
         </div>
@@ -99,7 +102,7 @@
               <p class="card-text">Object-oriented programming concepts using a visually-oriented, time-sensitive language. Concepts include data models, order of execution, file management, encapsulation, testing, and debugging.</p>
             </div>
             <div class="card-footer">
-              <a href="http://raider.mountunion.edu/~olbrycag/CSW223/index.html" class="btn btn-primary">View my projects!</a>
+              <a href="https://austin-olbrych.github.io/School/CSW223/home.html" class="btn btn-primary">View my projects!</a>
             </div>
           </div>
         </div>
@@ -112,7 +115,7 @@
               <p class="card-text">This course is concerned with the design, evaluation and implementation of interactive computing systems for human use and with the study of major phenomena surrounding them.</p>
             </div>
             <div class="card-footer">
-              <a href="http://raider.mountunion.edu/~olbrycag/CSW423/home.html" class="btn btn-primary">View my projects!</a>
+              <a href="https://austin-olbrych.github.io/School/CSW423/home.html" class="btn btn-primary">View my projects!</a>
             </div>
           </div>
         </div>
@@ -125,7 +128,7 @@
               <p class="card-text">An introduction to programming client-server applications that use a web browser on client machines and a database engine on the server. The course includes programming the user interface and the database interface. </p>
             </div>
             <div class="card-footer">
-              <a href="https://silver.mountunion.edu:50047/olbrycag/" class="btn btn-primary">View my projects!</a>
+              <a href="https://silver.mountunion.edu:50047/olbrycag/" class="btn btn-primary" disabled="disabled">View my projects!</a>
             </div>
           </div>
         </div>
@@ -138,7 +141,7 @@
               <p class="card-text">A study of software development characterized by a practical, orderly and measured development process. The dominant features of this process are requirements specification, selection of a software life cycle model, software testing, project management techniques and quality assurance. </p>
             </div>
             <div class="card-footer">
-              <a href="http://raider.mountunion.edu/~olbrycag/CSC491/home.html" class="btn btn-primary">View my projects!</a>
+              <a href="https://austin-olbrych.github.io/School/CSC491/home.html" class="btn btn-primary">View my projects!</a>
             </div>
           </div>
         </div>
@@ -151,7 +154,7 @@
               <p class="card-text">A continuation of the study of software engineering practices begun in CSC 491. Issues of team-building, project planning and configuration management will be explored. Each student will complete a significant software development or research project as part of a team. </p>
             </div>
             <div class="card-footer">
-              <a href="http://raider.mountunion.edu/~olbrycag/CSC492/492Blog.html" class="btn btn-primary">Check Scrummies</a>
+              <a href="https://austin-olbrych.github.io/School/CSC492/home.html" class="btn btn-primary">Check Scrummies</a>
             </div>
           </div>
         </div>
