Changed links to new host

--- a/CSC410/home.html
+++ b/CSC410/home.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="http://raider.mountunion.edu/~olbrycag/OfficialSite/style.css" rel="stylesheet">
+		<link href="https://austin-olbrych.github.io/School/OfficialSite/style.css" rel="stylesheet">
 		<title>Austin Olbrych's CSC 410 Homepage</title>
 	</head>
 		<body>
-			<a href="http://raider.mountunion.edu/~olbrycag/OfficialSite/Personal/home.html" class="buttonList">Home</a>
+			<a href="https://austin-olbrych.github.io/School/OfficialSite/Personal/home.html" class="buttonList">Home</a>
 			<a href="https://silver.mountunion.edu:50047/olbrycag/" class="buttonList">Home Page</a>
 		</body>
 	</html>
