--- a/CSC491/home.html
+++ b/CSC491/home.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="http://raider.mountunion.edu/~olbrycag/OfficialSite/style.css" rel="stylesheet">
+		<link href="https://austin-olbrych.github.io/School/OfficialSite/style.css" rel="stylesheet">
 		<title>Austin Olbrych's CSC 491 Homepage</title>
 	</head>
 		<body>
-			<a href="http://raider.mountunion.edu/~olbrycag/OfficialSite/Personal/home.html" class="buttonList">Home</a>
+			<a href="https://austin-olbrych.github.io/School/OfficialSite/Personal/home.html" class="buttonList">Home</a>
 			<a href="http://raider.mountunion.edu/~olbrycag/OfficialSite/CSC491/ResearchPaper1.pdf" class="buttongList">First Research Paper</a>
 			<a href="http://raider.mountunion.edu/~olbrycag/OfficialSite/CSC491/ResearchPaper2.pdf" class="buttongList">Second Research Paper</a>
 		</body>
