--- a/CSW103/home.html
+++ b/CSW103/home.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="http://raider.mountunion.edu/~olbrycag/OfficialSite/style.css" rel="stylesheet">
+		<link href="https://austin-olbrych.github.io/School/OfficialSite/style.css" rel="stylesheet">
 		<title>Austin Olbrych's CSW 103 Homepage</title>
 	</head>
 		<body>
-			<a href="http://raider.mountunion.edu/~olbrycag/OfficialSite/Personal/home.html" class="buttonList">Home</a>
+			<a href="https://austin-olbrych.github.io/School/OfficialSite/Personal/home.html" class="buttonList">Home</a>
 			<a href="http://raider.mountunion.edu/~olbrycag/CSW103/Assgn1/Assgn1.html" class="buttonList">Assignment 1</a>
 			<a href="http://raider.mountunion.edu/~olbrycag/CSW103/Assgn2/Assgn2.html" class="buttonList">Assignment 2</a>
 			<a href="http://raider.mountunion.edu/~olbrycag/CSW103/Assgn3/index.html" class="buttonList">Assignment 3</a>
