--- a/CSW113/home.html
+++ b/CSW113/home.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="http://raider.mountunion.edu/~olbrycag/OfficialSite/style.css" rel="stylesheet">
+		<link href="https://austin-olbrych.github.io/School/OfficialSite/style.css" rel="stylesheet">
 		<title>Austin Olbrych's CSW 113 Homepage</title>
 	</head>
   	<body>
-			<a href="http://raider.mountunion.edu/~olbrycag/OfficialSite/Personal/home.html" class="buttonList">Home</a>
+			<a href="https://austin-olbrych.github.io/School/OfficialSite/Personal/home.html" class="buttonList">Home</a>
 			<a href="http://raider.mountunion.edu/~olbrycag/CSW113/hw1/hw1.html" class="buttonList">Homework 1</a>
 			<a href="http://raider.mountunion.edu/~olbrycag/CSW113/hw2/hw2.html" class="buttonList">Homework 2</a>
 			<a href="http://raider.mountunion.edu/~olbrycag/CSW113/hw3/hw3.html" class="buttonList">Homework 3</a>
