--- a/OfficialSite/Personal/home.html
+++ b/OfficialSite/Personal/home.html
@@ -27,22 +27,23 @@
         <a class="navbar-brand"><img src="AustinCircle.gif" alt="Austin" width="50px" height="50px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <!--<span class="navbar-toggler-icon"></span>-->
-          <a class="nav-link" href="http://raider.mountunion.edu/~olbrycag/OfficialSite/Personal/newerBlog.html">Blog</a>
+          <a class="nav-link" href="https://austin-olbrych.github.io/School/OfficialSite/Personal/newerBlog.html">Blog</a>
+					<a class="nav-link" href="https://austin-olbrych.github.io/School/CSC492/492Blog.html">Scrummies</a>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
 						<!-- https://austin-olbrych.github.io/School/OfficialSite/Personal/home.html
-						http://raider.mountunion.edu/~olbrycag/OfficialSite/Personal/home.html
+						https://austin-olbrych.github.io/School/OfficialSite/Personal/home.html
 						-->
               <a class="nav-link" href="https://austin-olbrych.github.io/School/OfficialSite/Personal/home.html">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://austin-olbrych.github.io/School/OfficialSite/Personal/newerBlog.html">Blog</a>
+              <a class="nav-link" href="https://austin-olbrych.github.io/School/OfficialSite/Personal/newerBlog.html">Internship</a>
             </li>
-			<li class="nav-item">
+						<li class="nav-item">
               <a class="nav-link" href="https://austin-olbrych.github.io/School/CSC492/492Blog.html">Scrummies</a>
             </li>
           </ul>
@@ -62,7 +63,7 @@
         <a href="https://www.facebook.com/austin.olbrych" class="btn btn-primary btn-lg" target="_blank">Facebook</a>
         <a href="https://www.youtube.com/user/lilalonhorn49" class="btn btn-primary btn-lg" target="_blank">Youtube</a>
         <a href="https://plus.google.com/115550299016966040960" class="btn btn-primary btn-lg" target="_blank">Google</a><br><br>
-		    <a href="mailto:austin.olbrych@gmail.com?body=%0A%0A%0ASent%20from%20your%20website." class="btn btn-primary btn-lg" target="_top">Send Email</a>
+		    <!--<a href="mailto:austin.olbrych@gmail.com?body=%0A%0A%0ASent%20from%20your%20website." class="btn btn-primary btn-lg" target="_top">Send Email</a>-->
       </header>
 
       <!-- Page Features -->
