--- a/CSC492/492Blog.html
+++ b/CSC492/492Blog.html
@@ -29,17 +29,17 @@
         <a class="navbar-brand"><img src="rugby.png" alt="scrum" width="50px" height="50px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <!--<span class="navbar-toggler-icon"></span>-->
-          <a class="nav-link" href="http://raider.mountunion.edu/~olbrycag/OfficialSite/Personal/home.html">Home</a>
+          <a class="nav-link" href="https://austin-olbrych.github.io/School/OfficialSite/Personal/home.html">Home</a>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="http://raider.mountunion.edu/~olbrycag/OfficialSite/Personal/home.html">Home</a>
+              <a class="nav-link" href="https://austin-olbrych.github.io/School/OfficialSite/Personal/home.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="http://raider.mountunion.edu/~olbrycag//OfficialSite/Personal/newerBlog.html">Blog</a>
             </li>
-			<li class="nav-item active">
+						<li class="nav-item active">
               <a class="nav-link" href="http://raider.mountunion.edu/~olbrycag/CSC492/492Blog.html">Scrummies<span class="sr-only">(current)</span></a>
             </li>
           </ul>
