Changed project links

--- a/CSC491/home.html
+++ b/CSC491/home.html
@@ -6,7 +6,7 @@
 	</head>
 		<body>
 			<a href="https://austin-olbrych.github.io/School/OfficialSite/Personal/home.html" class="buttonList">Home</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/OfficialSite/CSC491/ResearchPaper1.pdf" class="buttongList">First Research Paper</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/OfficialSite/CSC491/ResearchPaper2.pdf" class="buttongList">Second Research Paper</a>
+			<a href="https://austin-olbrych.github.io/School/OfficialSite/CSC491/ResearchPaper1.pdf" class="buttongList">First Research Paper</a>
+			<a href="https://austin-olbrych.github.io/School/OfficialSite/CSC491/ResearchPaper2.pdf" class="buttongList">Second Research Paper</a>
 		</body>
 	</html>
