--- a/CSW113/home.html
+++ b/CSW113/home.html
@@ -6,11 +6,11 @@
 	</head>
   	<body>
 			<a href="https://austin-olbrych.github.io/School/OfficialSite/Personal/home.html" class="buttonList">Home</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW113/hw1/hw1.html" class="buttonList">Homework 1</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW113/hw2/hw2.html" class="buttonList">Homework 2</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW113/hw3/hw3.html" class="buttonList">Homework 3</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW113/hw4/hw4.html" class="buttonList">Homework 4</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW113/hw5/hw5.html" class="buttonList">Homework 5</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW113/final/final.html" class="buttonList">Final Project</a>
+			<a href="https://austin-olbrych.github.io/School/CSW113/hw1/hw1.html" class="buttonList">Homework 1</a>
+			<a href="https://austin-olbrych.github.io/School/CSW113/hw2/hw2.html" class="buttonList">Homework 2</a>
+			<a href="https://austin-olbrych.github.io/School/CSW113/hw3/hw3.html" class="buttonList">Homework 3</a>
+			<a href="https://austin-olbrych.github.io/School/CSW113/hw4/hw4.html" class="buttonList">Homework 4</a>
+			<a href="https://austin-olbrych.github.io/School/CSW113/hw5/hw5.html" class="buttonList">Homework 5</a>
+			<a href="https://austin-olbrych.github.io/School/CSW113/final/final.html" class="buttonList">Final Project</a>
 	</body>
 </html>
