--- a/CSW423/home.html
+++ b/CSW423/home.html
@@ -6,12 +6,12 @@
 	</head>
   	<body>
 			<a href="https://austin-olbrych.github.io/School/OfficialSite/Personal/home.html" class="buttonList">Home</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW423/Assignment1/assignment1.html" class="buttonList">Assignment 1</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW423/Assignment2/assignment2.html" class="buttonList">Assignment 2</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW423/Assignment3/home.html" class="buttonList">Assignment 3</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW423/Assignment4/index.html" class="buttonList">Assignment 4</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW423/Assignment5/index.html" class="buttonList">Assignment 5</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW423/Assignment6/home.html" class="buttonList">Assignment 6</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW423/Final/index.html" class="buttonList">Final Project</a>
+			<a href="https://austin-olbrych.github.io/School/CSW423/Assignment1/assignment1.html" class="buttonList">Assignment 1</a>
+			<a href="https://austin-olbrych.github.io/School/CSW423/Assignment2/assignment2.html" class="buttonList">Assignment 2</a>
+			<a href="https://austin-olbrych.github.io/School/CSW423/Assignment3/home.html" class="buttonList">Assignment 3</a>
+			<a href="https://austin-olbrych.github.io/School/CSW423/Assignment4/index.html" class="buttonList">Assignment 4</a>
+			<a href="https://austin-olbrych.github.io/School/CSW423/Assignment5/index.html" class="buttonList">Assignment 5</a>
+			<a href="https://austin-olbrych.github.io/School/CSW423/Assignment6/home.html" class="buttonList">Assignment 6</a>
+			<a href="https://austin-olbrych.github.io/School/CSW423/Final/index.html" class="buttonList">Final Project</a>
 	</body>
 </html>
