--- a/CSC492/492Blog.html
+++ b/CSC492/492Blog.html
@@ -37,10 +37,10 @@
               <a class="nav-link" href="https://austin-olbrych.github.io/School/OfficialSite/Personal/home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://raider.mountunion.edu/~olbrycag//OfficialSite/Personal/newerBlog.html">Blog</a>
+              <a class="nav-link" href="https://austin-olbrych.github.io/School//OfficialSite/Personal/newerBlog.html">Blog</a>
             </li>
 						<li class="nav-item active">
-              <a class="nav-link" href="http://raider.mountunion.edu/~olbrycag/CSC492/492Blog.html">Scrummies<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="https://austin-olbrych.github.io/School/CSC492/492Blog.html">Scrummies<span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </div>
@@ -358,13 +358,13 @@
 			        <div class="row">
                 <div class="col-lg-6">
                   <ul class="list-unstyled mb-0">
-					<li><a href="http://raider.mountunion.edu/~olbrycag/CSC492/DFD-Level1.jpg">Data Flow Diagram</a></li>
-					<li><a href="http://raider.mountunion.edu/~olbrycag/CSC492/DD1-Scrummies.pdf">Design Document</a></li>
-					<li><a href="http://raider.mountunion.edu/~olbrycag/CSC492/PressReleaseFinal.pdf">Press Release</a></li>
-					<li><a href="http://raider.mountunion.edu/~olbrycag/CSC492/ScheduleUpdate.pdf">Schedule</a></li>
-					<li><a href="http://raider.mountunion.edu/~olbrycag/CSC492/SRS-Scrummies.pdf">SRS Document</a></li>
-					<li><a href="http://raider.mountunion.edu/~olbrycag/CSC492/UserManual(RoughDraft).pdf">User Manual</a></li>
-					<!--<li><a href="http://raider.mountunion.edu/~olbrycag/CSC492/scrum.jpg">Click Here Evan</a></li>-->
+					<li><a href="https://austin-olbrych.github.io/School/CSC492/DFD-Level1.jpg">Data Flow Diagram</a></li>
+					<li><a href="https://austin-olbrych.github.io/School/CSC492/DD1-Scrummies.pdf">Design Document</a></li>
+					<li><a href="https://austin-olbrych.github.io/School/CSC492/PressReleaseFinal.pdf">Press Release</a></li>
+					<li><a href="https://austin-olbrych.github.io/School/CSC492/ScheduleUpdate.pdf">Schedule</a></li>
+					<li><a href="https://austin-olbrych.github.io/School/CSC492/SRS-Scrummies.pdf">SRS Document</a></li>
+					<li><a href="https://austin-olbrych.github.io/School/CSC492/UserManual(RoughDraft).pdf">User Manual</a></li>
+					<!--<li><a href="https://austin-olbrych.github.io/School/CSC492/scrum.jpg">Click Here Evan</a></li>-->
                   </ul>
                 </div>
               </div>
@@ -397,25 +397,25 @@
           				<b>January Blogs</b>
 					</li>
 					<li>
-						<a href="http://raider.mountunion.edu/~olbrycag/CSC492/492Blog.html#january-22">January 22 Post</a>
+						<a href="https://austin-olbrych.github.io/School/CSC492/492Blog.html#january-22">January 22 Post</a>
 					</li>
 					<li>
-						<a href="http://raider.mountunion.edu/~olbrycag/CSC492/492Blog.html#january-29">January 29 Post</a>
+						<a href="https://austin-olbrych.github.io/School/CSC492/492Blog.html#january-29">January 29 Post</a>
 					</li>
 					<li>
 						<b>February Blogs</b>
 					</li>
 					<li>
-						<a href="http://raider.mountunion.edu/~olbrycag/CSC492/492Blog.html#february-5">February 5 Post</a>
+						<a href="https://austin-olbrych.github.io/School/CSC492/492Blog.html#february-5">February 5 Post</a>
 					</li>
 					<li>
-						<a href="http://raider.mountunion.edu/~olbrycag/CSC492/492Blog.html#february-12">February 12 Post</a>
+						<a href="https://austin-olbrych.github.io/School/CSC492/492Blog.html#february-12">February 12 Post</a>
 					</li>
 					<li>
-						<a href="http://raider.mountunion.edu/~olbrycag/CSC492/492Blog.html#february-19">February 19 Post</a>
+						<a href="https://austin-olbrych.github.io/School/CSC492/492Blog.html#february-19">February 19 Post</a>
 					</li>
 					<li>
-						<a href="http://raider.mountunion.edu/~olbrycag/CSC492/492Blog.html#february-26">February 26 Post</a>
+						<a href="https://austin-olbrych.github.io/School/CSC492/492Blog.html#february-26">February 26 Post</a>
 					</li>
                   </ul>
                 </div>
@@ -425,25 +425,25 @@
 						<b>March Blogs</b>
 					</li>
 					<li>
-						<a href="http://raider.mountunion.edu/~olbrycag/CSC492/492Blog.html#march-5">March 5 Post</a>
+						<a href="https://austin-olbrych.github.io/School/CSC492/492Blog.html#march-5">March 5 Post</a>
 					</li>
 					<li>
-						<a href="http://raider.mountunion.edu/~olbrycag/CSC492/492Blog.html#march-12">March 12 Post</a>
+						<a href="https://austin-olbrych.github.io/School/CSC492/492Blog.html#march-12">March 12 Post</a>
 					</li>
 					<li>
-						<a href="http://raider.mountunion.edu/~olbrycag/CSC492/492Blog.html#march-19">March 19 Post</a>
+						<a href="https://austin-olbrych.github.io/School/CSC492/492Blog.html#march-19">March 19 Post</a>
 					</li>
 					<li>
-						<a href="http://raider.mountunion.edu/~olbrycag/CSC492/492Blog.html#march-26">March 26 Post</a>
+						<a href="https://austin-olbrych.github.io/School/CSC492/492Blog.html#march-26">March 26 Post</a>
 					</li>
 					<li>
 						<b>April Blogs</b>
 					</li>
 					<li>
-						<a href="http://raider.mountunion.edu/~olbrycag/CSC492/492Blog.html#april-2">April 2 Post</a>
+						<a href="https://austin-olbrych.github.io/School/CSC492/492Blog.html#april-2">April 2 Post</a>
 					</li>
 					<li>
-						<a href="http://raider.mountunion.edu/~olbrycag/CSC492/492Blog.html#april-8">April 8 Post</a>
+						<a href="https://austin-olbrych.github.io/School/CSC492/492Blog.html#april-8">April 8 Post</a>
 					</li>
 				   </u>
                   </ul>
