--- a/CSW103/home.html
+++ b/CSW103/home.html
@@ -6,12 +6,12 @@
 	</head>
 		<body>
 			<a href="https://austin-olbrych.github.io/School/OfficialSite/Personal/home.html" class="buttonList">Home</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW103/Assgn1/Assgn1.html" class="buttonList">Assignment 1</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW103/Assgn2/Assgn2.html" class="buttonList">Assignment 2</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW103/Assgn3/index.html" class="buttonList">Assignment 3</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW103/Assgn4/index.html" class="buttonList">Assignment 4</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW103/Assgn5/Pacific_Trails_Resort/index.html" class="buttonList">Assignment 5</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW103/Assgn6/Pacific_Trails/index.html" class="buttonList">Assignment 6</a>
-			<a href="http://raider.mountunion.edu/~olbrycag/CSW103/FinProj/index.html" class="buttonList">Final Project</a>
+			<a href="https://austin-olbrych.github.io/School/CSW103/Assgn1/Assgn1.html" class="buttonList">Assignment 1</a>
+			<a href="https://austin-olbrych.github.io/School/CSW103/Assgn2/Assgn2.html" class="buttonList">Assignment 2</a>
+			<a href="https://austin-olbrych.github.io/School/CSW103/Assgn3/index.html" class="buttonList">Assignment 3</a>
+			<a href="https://austin-olbrych.github.io/School/CSW103/Assgn4/index.html" class="buttonList">Assignment 4</a>
+			<a href="https://austin-olbrych.github.io/School/CSW103/Assgn5/Pacific_Trails_Resort/index.html" class="buttonList">Assignment 5</a>
+			<a href="https://austin-olbrych.github.io/School/CSW103/Assgn6/Pacific_Trails/index.html" class="buttonList">Assignment 6</a>
+			<a href="https://austin-olbrych.github.io/School/CSW103/FinProj/index.html" class="buttonList">Final Project</a>
 		</body>
 	</html>
