--- a/CSW223/index.html
+++ b/CSW223/index.html
@@ -10,19 +10,19 @@
     <br>
     Some of my web files for CSC 223 will be listed here.<br>
     <p>
-		<a href="http://raider.mountunion.edu/~olbrycag/CSW223/Lab01/index.html">Lab 01</a>
-		<a href="http://raider.mountunion.edu/~olbrycag/CSW223/Lab02/index.html">Lab 02</a>
-		<a href="http://raider.mountunion.edu/~olbrycag/CSW223/Lab03/lab03.html">Lab 03</a>
-		<a href="http://raider.mountunion.edu/~olbrycag/CSW223/Lab04/q1.html">Lab 04</a>
-		<a href="http://raider.mountunion.edu/~olbrycag/CSW223/Lab05/q2.html">Lab 05</a>
-		<a href="http://raider.mountunion.edu/~olbrycag/CSW223/Quiz1Sample/q1.html">Quiz 1 Sample</a>
-		<a href="http://raider.mountunion.edu/~olbrycag/CSW223/Quiz2Sample/quiz2.html">Quiz 2 Sample</a>
-		<a href="http://raider.mountunion.edu/~olbrycag/CSW223/practiceTest1/test1a.html">Test Practice 1a</a>
-		<a href="http://raider.mountunion.edu/~olbrycag/CSW223/practiceTest1/test1b.html">Test Practice 1b</a>
-		<a href="http://raider.mountunion.edu/~olbrycag/CSW223/Lab07/Objects1.html">Lab 07</a>
-		<a href="http://raider.mountunion.edu/~olbrycag/CSW223/ClickObject/ClickingObjects.html">Click Objects</a>
-		<a href="http://raider.mountunion.edu/~olbrycag/CSW223/Project1New/Preview.html">Project 1</a>
-    <a href="http://raider.mountunion.edu/~olbrycag/CSW223/Project2/StoryDemo.html">Project 2</a>
+		<a href="https://austin-olbrych.github.io/School/CSW223/Lab01/index.html">Lab 01</a>
+		<a href="https://austin-olbrych.github.io/School/CSW223/Lab02/index.html">Lab 02</a>
+		<a href="https://austin-olbrych.github.io/School/CSW223/Lab03/lab03.html">Lab 03</a>
+		<a href="https://austin-olbrych.github.io/School/CSW223/Lab04/q1.html">Lab 04</a>
+		<a href="https://austin-olbrych.github.io/School/CSW223/Lab05/q2.html">Lab 05</a>
+		<a href="https://austin-olbrych.github.io/School/CSW223/Quiz1Sample/q1.html">Quiz 1 Sample</a>
+		<a href="https://austin-olbrych.github.io/School/CSW223/Quiz2Sample/quiz2.html">Quiz 2 Sample</a>
+		<a href="https://austin-olbrych.github.io/School/CSW223/practiceTest1/test1a.html">Test Practice 1a</a>
+		<a href="https://austin-olbrych.github.io/School/CSW223/practiceTest1/test1b.html">Test Practice 1b</a>
+		<a href="https://austin-olbrych.github.io/School/CSW223/Lab07/Objects1.html">Lab 07</a>
+		<a href="https://austin-olbrych.github.io/School/CSW223/ClickObject/ClickingObjects.html">Click Objects</a>
+		<a href="https://austin-olbrych.github.io/School/CSW223/Project1New/Preview.html">Project 1</a>
+    <a href="https://austin-olbrych.github.io/School/CSW223/Project2/StoryDemo.html">Project 2</a>
 	</p>
   </body>
 </html>
