--- a/OfficialSite/Personal/newerBlog.html
+++ b/OfficialSite/Personal/newerBlog.html
@@ -38,6 +38,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="http://raider.mountunion.edu/~olbrycag//OfficialSite/Personal/newerBlog.html">Blog <span class="sr-only">(current)</span></a>
             </li>
+						<li class="nav-item">
+              <a class="nav-link" href="https://austin-olbrych.github.io/School/CSC492/492Blog.html">Scrummies<span class="sr-only">(current)</span></a>
+            </li>
           </ul>
         </div>
       </div>
